- occurrences as relations in groups - merged sequenceStack and groupStack to objectStack - bug fixes